# gcodegen

./: .gitignore  pyproject.toml
examples/: example.cmd
gcodegen/: cli.py  core.py  i18n.py  post.py  validator.py
gcodegen/data/posts/: fanuc_ru.yaml
